@@ -30,12 +30,13 @@ typedef enum {
 /// Flags indicating inline abbreviation information for a statement
 typedef enum {
   SERD_EMPTY_S = 1U << 0U, ///< Empty blank node subject
-  SERD_ANON_S  = 1U << 1U, ///< Start of anonymous subject
-  SERD_ANON_O  = 1U << 2U, ///< Start of anonymous object
-  SERD_LIST_S  = 1U << 3U, ///< Start of list subject
-  SERD_LIST_O  = 1U << 4U, ///< Start of list object
-  SERD_TERSE_S = 1U << 5U, ///< Start of terse subject
-  SERD_TERSE_O = 1U << 6U, ///< Start of terse object
+  SERD_EMPTY_G = 1U << 1U, ///< Empty blank node graph
+  SERD_ANON_S  = 1U << 2U, ///< Start of anonymous subject
+  SERD_ANON_O  = 1U << 3U, ///< Start of anonymous object
+  SERD_LIST_S  = 1U << 4U, ///< Start of list subject
+  SERD_LIST_O  = 1U << 5U, ///< Start of list object
+  SERD_TERSE_S = 1U << 6U, ///< Start of terse subject
+  SERD_TERSE_O = 1U << 7U, ///< Start of terse object
 } SerdStatementFlag;
 
 /// Bitwise OR of SerdStatementFlag values
